Adicionei fotos e valores d epais em euro

--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
 </head>
 
 <body>
+
     <div id="app">
+
         <header>
+            <div class="currency-selecto">
+                  <button id="TotalBtn"><i class="fa fa-eye"></i></button> 
+                  <div>
+                    <img src="./src/img/Flag_of_Brazil.svg.png" alt="BRL" id="BRL" class="currency-img selected">
+                <img src="./src/img/euro.png" alt="EUR"  id="EUR"class="currency-img">
+                  </div>
+                  
+             
+            </div>
             <div class="h1">
                 <h1>Lista - Mercado</h1>
-                <button id="TotalBtn"><i class="fa fa-eye"></i></button>
             </div>
 
 
@@ -57,13 +67,14 @@
 
 
     </div>
-    <script src="./src/js.js">
-    </script>
-    <script src="
-https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.all.min.js
-"></script>
+
 
 
 </body>
+<script src="./src/js.js">
+</script>
+<script src="
+https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.all.min.js
+"></script>
 
 </html>
